--- a/base/src/main/res/layout/list_dialog_layout.xml
+++ b/base/src/main/res/layout/list_dialog_layout.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/stroke_filled"
+    android:background="@drawable/stroke_filled_top"
     android:orientation="vertical">
 
 
