--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,13 @@
 
     </LinearLayout>
 
+    <com.github.mmin18.widget.RealtimeBlurView
+        android:id="@+id/rootblur"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:realtimeBlurRadius="25dp"
+        app:realtimeOverlayColor="@color/transparent" />
 </RelativeLayout>
 
 
