--- a/base/src/main/res/layout/icon_layout.xml
+++ b/base/src/main/res/layout/icon_layout.xml
@@ -6,11 +6,10 @@
     android:id="@+id/icon_imageview"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-
     android:layout_gravity="center"
     android:layout_margin="@dimen/margin_default_10dp"
     app:civ_border_color="?android:textColorPrimary"
     app:civ_border_width="@dimen/default_stroke"
-    app:civ_circle_background_color="?attr/dividerColor"
+    app:civ_circle_background_color="?android:textColorHint"
     tools:src="@drawable/ic_up_arrow" />
 
