--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -86,7 +86,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/margin_default_10dp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
         <item name="android:textColor">@color/md_white</item>
     </style>
 
