--- a/manager/src/main/res/layout/fragment_icons.xml
+++ b/manager/src/main/res/layout/fragment_icons.xml
@@ -7,6 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-    app:spanCount="2"
+    app:spanCount="3"
     tools:itemCount="10"
-    tools:listitem="@layout/cover_layout" />
+    tools:listitem="@layout/icon_layout" />
