--- a/manager/src/main/res/layout/style_card.xml
+++ b/manager/src/main/res/layout/style_card.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/styleCard"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:layout_margin="@dimen/margin_default_10dp"
+    style="@style/MotivCard"
+    android:layout_margin="@dimen/margin_small_4dp"
     android:foreground="?attr/selectableItemBackground"
-    android:stateListAnimator="@animator/scale_down_animator"
-    app:cardBackgroundColor="?attr/dividerColor"
-    app:cardCornerRadius="@dimen/radius_small_5dp"
-    app:cardElevation="0dp"
-    app:strokeColor="?android:textColorPrimary"
-    app:strokeWidth="2dp">
+    android:stateListAnimator="@animator/scale_down_animator">
 
     <ImageView
         android:id="@+id/styleImage"
