--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -1,33 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/playerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent"
-    android:orientation="horizontal"
-    android:padding="@dimen/padding_small_8dp"
-    android:visibility="gone"
-    tools:visibility="visible">
+    android:background="@drawable/gradient_animation">
+
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/playing_animation"
-        android:layout_width="40dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        android:stateListAnimator="@animator/list_animator"
-        app:lottie_colorFilter="@color/colorPrimaryDark"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/planet_spinning"
-        app:lottie_repeatMode="reverse"
-        app:lottie_scale="8" />
-
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/radiosPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        app:lottie_loop="true"
+        app:lottie_repeatMode="reverse"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@id/radiosPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_rawRes="@raw/stars" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/radioTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/padding_default_16dp"
+        android:layout_marginTop="@dimen/margin_default_10dp"
+        android:alpha="0"
+        android:text="Radios"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_default_10dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/radiosPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/radioTitle"
+        android:layout_width="match_parent"
+        tools:listitem="@layout/radio_page_collapsed_layout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
