--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -8,18 +8,26 @@
     android:background="@drawable/gradient_animation">
 
 
-    <com.airbnb.lottie.LottieAnimationView
+    <ImageView
+        android:id="@+id/visualizer_back"
         android:layout_width="match_parent"
-        app:lottie_loop="true"
-        app:lottie_repeatMode="reverse"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@id/radiosPager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mmin18.widget.RealtimeBlurView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@id/radiosPager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/stars" />
+        app:realtimeBlurRadius="@dimen/radius_big_20dp"
+        app:realtimeOverlayColor="@color/transparent" />
 
     <TextView
         android:id="@+id/radioTitle"
