--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -74,7 +74,7 @@
                         android:id="@+id/adInfo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentTop="true"
                         android:orientation="vertical"
                         android:padding="@dimen/padding_default_16dp">
 
