--- a/app/src/main/res/layout/radio_page_collapsed_layout.xml
+++ b/app/src/main/res/layout/radio_page_collapsed_layout.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:layout_marginHorizontal="@dimen/padding_default_16dp"
     android:layout_marginVertical="@dimen/margin_small_4dp"
     android:fitsSystemWindows="true"
@@ -48,8 +48,8 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/visualizer_card"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="0dp"
             android:layout_margin="@dimen/margin_default_10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
