--- a/base/src/main/res/layout/user_picview.xml
+++ b/base/src/main/res/layout/user_picview.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/userpic"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
+    android:layout_width="?attr/actionBarSize"
+    android:layout_height="?attr/actionBarSize"
     android:visibility="gone"
     android:layout_marginEnd="@dimen/margin_small_4dp"
     app:civ_border_color="?android:textColorPrimary"
