--- a/app/src/main/res/layout/developer_layout.xml
+++ b/app/src/main/res/layout/developer_layout.xml
@@ -7,7 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_default_10dp"
-    android:stateListAnimator="@animator/list_animator"
+    android:stateListAnimator="@animator/scale_down_animator"
     app:cardBackgroundColor="@color/colorAccent"
     app:cardCornerRadius="@dimen/radius_default_10dp"
     app:cardElevation="3dp"
