--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/playerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_animation">
+    android:background="@drawable/motiv_gradient">
 
 
     <ImageView
