--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="200dp"
     android:layout_height="250dp"
     android:layout_margin="10dp"
-    android:stateListAnimator="@animator/list_animator"
+    android:stateListAnimator="@animator/scale_down_animator"
     app:cardCornerRadius="@dimen/radius_default_10dp"
     app:cardElevation="0dp"
     app:strokeColor="?android:textColorPrimary"
