--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -7,7 +7,7 @@
     android:layout_height="?attr/actionBarSize"
     android:layout_margin="@dimen/margin_default_10dp"
     android:background="?attr/dividerColor"
-    android:stateListAnimator="@animator/list_animator"
+    android:stateListAnimator="@animator/scale_down_animator"
     app:cardCornerRadius="@dimen/radius_default_10dp"
     app:cardElevation="0dp"
     app:strokeColor="?android:textColorPrimary"
@@ -31,34 +31,6 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/dots"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="2dp">
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/defaultdot"
-                app:tint="@color/material_purple500" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/defaultdot"
-                app:tint="@color/material_purpleA200" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/defaultdot"
-                app:tint="@color/material_purpleA700" />
-        </LinearLayout>
 
         <TextView
             android:id="@+id/username"
