--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -5,29 +5,7 @@
     android:id="@+id/playerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/motiv_gradient">
-
-
-    <ImageView
-        android:id="@+id/visualizer_back"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@id/radiosPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.github.mmin18.widget.RealtimeBlurView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@id/radiosPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:realtimeBlurRadius="@dimen/topBlurSize"
-        app:realtimeOverlayColor="@color/transparent" />
+    android:background="?android:colorBackground">
 
     <TextView
         android:id="@+id/radioTitle"
