--- a/app/src/main/res/layout/radio_page_collapsed_layout.xml
+++ b/app/src/main/res/layout/radio_page_collapsed_layout.xml
@@ -16,6 +16,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/visualizer_back"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.github.mmin18.widget.RealtimeBlurView
+            android:id="@+id/radio_blur"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:realtimeBlurRadius="@dimen/topBlurSize"
+            app:realtimeOverlayColor="@color/transparent" />
 
         <TextView
             android:id="@+id/radioName"
