--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -105,7 +105,7 @@
     <style name="StyleCard" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">@dimen/radius_default_10dp</item>
         <item name="cardElevation">0dp</item>
-        <item name="cardBackgroundColor">@color/colorAccent</item>
+        <item name="cardBackgroundColor">?android:colorBackground</item>
         <item name="strokeColor">@color/selected_style</item>
         <item name="strokeWidth">@dimen/default_stroke</item>
         <item name="android:layout_margin">@dimen/margin_small_4dp</item>
