--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -6,8 +6,7 @@
     style="@style/StyleCard"
     android:layout_width="70dp"
     android:layout_height="70dp"
-    android:layout_margin="@dimen/margin_small_4dp"
-    android:visibility="gone"
+    android:layout_margin="@dimen/padding_default_16dp"
     tools:visibility="visible">
 
     <ImageView
