--- a/app/src/main/res/layout/share_quote_preview.xml
+++ b/app/src/main/res/layout/share_quote_preview.xml
@@ -13,13 +13,15 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardShadow"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_marginStart="@dimen/margin_default_10dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_big_16dp"
-        android:layout_marginVertical="?attr/actionBarSize"
         app:cardBackgroundColor="?android:textColorPrimary"
-        app:cardCornerRadius="@dimen/radius_default_10dp"
+        android:layout_marginEnd="@dimen/margin_big_16dp"
         app:cardElevation="0dp"
+        android:layout_marginBottom="@dimen/margin_default_10dp"
+        app:cardCornerRadius="@dimen/radius_small_5dp"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,16 +30,18 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/shareCard"
         style="@style/MotivCard"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_default_10dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/margin_default_10dp"
-        android:layout_marginTop="@dimen/padding_big_24"
-        android:layout_marginEnd="@dimen/margin_big_16dp"
-        android:layout_marginBottom="@dimen/margin_default_10dp"
-        app:layout_constraintBottom_toBottomOf="@id/cardShadow"
-        app:layout_constraintEnd_toEndOf="@id/cardShadow"
+        android:layout_marginEnd="@dimen/padding_big_24"
+        android:layout_marginBottom="@dimen/padding_big_24"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="?android:textColorPrimary">
 
         <RelativeLayout
@@ -47,7 +51,6 @@
 
             <ImageView
                 android:id="@+id/quoteImage"
-                android:layout_margin="1dp"
                 android:background="@color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -56,13 +59,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0.2"
-                android:background="@color/md_black" />
+                android:alpha="0.5"
+                android:background="@drawable/fade_gradient_inversed" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/padding_default_16dp"
+                android:layout_marginStart="@dimen/padding_default_16dp"
+                android:layout_marginTop="@dimen/padding_default_16dp"
+                android:layout_marginEnd="@dimen/padding_default_16dp"
+                android:layout_marginBottom="@dimen/padding_default_16dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
